# MTRX3760-Project-1-SJR

./: README.md
cameraProcessor/: CMakeLists.txt  Readme.txt  package.xml
cameraProcessor/Videos/: cinnamon-20231007-1.webm
cameraProcessor/include/cameraTester/: camera.h
cameraProcessor/src/: main.cpp
project1/: package.xml
project1/include/project1/: ConcaveCorner.h  DetermineEnd.h  DriveForward.h  convexState.h  wallFollower.h
project1/src/: DriveForward.cpp  concave.cpp  convexState.cpp  wallFollower.cpp
project1_new/: CMakeLists.txt  package.xml
project1_new/include/project1/: ConcaveCorner.h  DetermineEnd.h  DriveForward.h  convexState.h  wallFollower.h
project1_new/src/: DetermineEnd.cpp  DriveForward.cpp  concave.cpp  convexState.cpp  wallFollower.cpp
sim/launch/: maze.launch
sim/model_editor_models/maze/: model.sdf
sim/model_editor_models/mazered/: model.config  model.sdf
sim/worlds/: maze_world
