<?xml version="1.0"?>
<package format="2">
  <name>project1</name>
  <version>0.0.0</version>
  <description>MTRX3760 Project1</description>

  <license>BSD</license>

  <!-- Put your emails here!-->
  <maintainer email="rmea8895@uni.sydney.edu.au">rohan</maintainer>

  <url type="website">https://github.com/Pabso/MTRX3760-Project-1-SJR</url>
  
  <!-- Put Your emails here! -->
  <author email="rmea8895@uni.sydney.edu.au">Rohan Meagher</author>
  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>